# brain-games

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: linter-check.yml
brain_games/: __init__.py  brain_engine.py  cli.py
brain_games/games/: __init__.py  brain_calc.py  brain_gcd.py  calc_game.py  even_game.py  gcd_game.py  prime_game.py  progression_game.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
