[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "This is a set of five console games built on the principle of popular mobile brain training applications."
authors = ["Artem Nechai <lenikol95@mail.ru>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
wemake-python-styleguide = "^0.15.3"
isort = "^5.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
